--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <ul>
         <li>
           <a href="mailto:info@devstudio">
-            <img src="img/envelope.svg" alt="логотип имейла" />
+            <img src="./img/envelope.svg" alt="логотип имейла" />
             info@devstudio
           </a>
         </li>
         <li>
           <a href="tel:+380961111111">
-            <img src="img/Vector.svg" alt="Логотип телефонного номера" />
+            <img src="./img/vector.svg" alt="Логотип телефонного номера" />
             +38 096 111 11 11
           </a>
         </li>
@@ -47,7 +47,7 @@
         <h2>НАШИ ПРИНЦИПЫ</h2>
         <ul>
           <li>
-            <a href=""><img src="img/antenna1.svg" alt="Иконка антены" /></a>
+            <a href=""><img src="./img/antenna1.svg" alt="Иконка антены" /></a>
             <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -56,7 +56,7 @@
           </li>
 
           <li>
-            <a href=""><img src="img/clock1.svg" alt="Иконка часов" /></a>
+            <a href=""><img src="./img/clock1.svg" alt="Иконка часов" /></a>
             <h3>ПУНКТУАЛЬНОСТЬ</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -65,7 +65,7 @@
           </li>
 
           <li>
-            <a href=""><img src="img/diagram1.svg" alt="Иконка графика" /></a>
+            <a href=""><img src="./img/diagram1.svg" alt="Иконка графика" /></a>
             <h3>ПЛАНИРОВАНИЕ</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -74,7 +74,7 @@
           </li>
           <li>
             <a href=""
-              ><img src="img/astronaut1.svg" alt="Иконка астронавта"
+              ><img src="./img/astronaut1.svg" alt="Иконка астронавта"
             /></a>
             <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
             <p>
@@ -92,7 +92,7 @@
           <li>
             <a href="">
               <img
-                src="img/Comp_img.jpg"
+                src="./img/comp_img.jpg"
                 alt="Изображение компьютера"
                 width="380"
               />
@@ -102,7 +102,7 @@
           <li>
             <a href="">
               <img
-                src="img/Smartfone_img.jpg"
+                src="./img/smartfone_img.jpg"
                 alt="Изображение смартфона"
                 width="380"
               />
@@ -112,7 +112,7 @@
           <li>
             <a href="">
               <img
-                src="img/Desktop_img.jpg"
+                src="./img/desktop_img.jpg"
                 alt="Изображение монитора"
                 width="380"
               />
@@ -127,36 +127,40 @@
 
         <ul>
           <li>
-            <img src="img/John_Smith.jpg" alt="Фото Джона Смита" width="278" />
+            <img
+              src="./img/john_smith.jpg"
+              alt="Фото Джона Смита"
+              width="278"
+            />
             <h3 lang="en">John Smith</h3>
             <p lang="en">Product Designer</p>
 
             <ul>
               <li>
                 <a href=""
-                  ><img src="img/instagram.svg" alt="Логотип инстаграм"
+                  ><img src="./img/instagram.svg" alt="Логотип инстаграм"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/twitter.svg" alt="Логотип твиттер"
+                  ><img src="./img/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/facebook.svg" alt="Логотип фейсбук"
+                  ><img src="./img/facebook.svg" alt="Логотип фейсбук"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/linkedin.svg" alt="Логотип линкедин"
+                  ><img src="./img/linkedin.svg" alt="Логотип линкедин"
                 /></a>
               </li>
             </ul>
           </li>
           <li>
             <img
-              src="img/Marta_Stewart.jpg"
+              src="./img/marta_stewart.jpg"
               alt="Фото Марты Стюарт"
               width="278"
             />
@@ -165,29 +169,29 @@
             <ul>
               <li>
                 <a href=""
-                  ><img src="img/instagram.svg" alt="Логотип инстаграм"
+                  ><img src="./img/instagram.svg" alt="Логотип инстаграм"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/twitter.svg" alt="Логотип твиттер"
+                  ><img src="./img/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/facebook.svg" alt="Логотип фейсбук"
+                  ><img src="./img/facebook.svg" alt="Логотип фейсбук"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/linkedin.svg" alt="Логотип линкедин"
+                  ><img src="./img/linkedin.svg" alt="Логотип линкедин"
                 /></a>
               </li>
             </ul>
           </li>
           <li>
             <img
-              src="img/Robert_Jakis.jpg"
+              src="./img/robert_jakis.jpg"
               alt="Фото Роберта Джекиса"
               width="278"
             />
@@ -196,49 +200,49 @@
             <ul>
               <li>
                 <a href=""
-                  ><img src="img/instagram.svg" alt="Логотип инстаграм"
+                  ><img src="./img/instagram.svg" alt="Логотип инстаграм"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/twitter.svg" alt="Логотип твиттер"
+                  ><img src="./img/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/facebook.svg" alt="Логотип фейсбук"
+                  ><img src="./img/facebook.svg" alt="Логотип фейсбук"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/linkedin.svg" alt="Логотип линкедин"
+                  ><img src="./img/linkedin.svg" alt="Логотип линкедин"
                 /></a>
               </li>
             </ul>
           </li>
           <li>
-            <img src="img/Martin_Doe.jpg" alt="Фото Мартина До" width="278" />
+            <img src="./img/martin_doe.jpg" alt="Фото Мартина До" width="278" />
             <h3 lang="en">Martin Doe</h3>
             <p lang="en">UI Designer</p>
             <ul>
               <li>
                 <a href=""
-                  ><img src="img/instagram.svg" alt="Логотип инстаграм"
+                  ><img src="./img/instagram.svg" alt="Логотип инстаграм"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/twitter.svg" alt="Логотип твиттер"
+                  ><img src="./img/twitter.svg" alt="Логотип твиттер"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/facebook.svg" alt="Логотип фейсбук"
+                  ><img src="./img/facebook.svg" alt="Логотип фейсбук"
                 /></a>
               </li>
               <li>
                 <a href=""
-                  ><img src="img/linkedin.svg" alt="Логотип линкедин"
+                  ><img src="./img/linkedin.svg" alt="Логотип линкедин"
                 /></a>
               </li>
             </ul>
@@ -250,22 +254,34 @@
         <h2>Постоянные клиенты</h2>
         <ul>
           <li>
-            <a href=""><img src="img/logo1.svg" alt="Логотип клиента 1" /> </a>
+            <a href=""
+              ><img src="./img/logo1.svg" alt="Логотип клиента 1" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="img/logo2.svg" alt="Логотип клиента 2" /> </a>
+            <a href=""
+              ><img src="./img/logo2.svg" alt="Логотип клиента 2" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="img/logo3.svg" alt="Логотип клиента 3" /> </a>
+            <a href=""
+              ><img src="./img/logo3.svg" alt="Логотип клиента 3" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="img/logo4.svg" alt="Логотип клиента 4" /> </a>
+            <a href=""
+              ><img src="./img/logo4.svg" alt="Логотип клиента 4" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="img/logo5.svg" alt="Логотип клиента 5" /> </a>
+            <a href=""
+              ><img src="./img/logo5.svg" alt="Логотип клиента 5" />
+            </a>
           </li>
           <li>
-            <a href=""><img src="img/logo6.svg" alt="Логотип клиента 6" /> </a>
+            <a href=""
+              ><img src="./img/logo6.svg" alt="Логотип клиента 6" />
+            </a>
           </li>
         </ul>
       </section>
